--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "autoprefixer": "10.4.20",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
+    "daisyui": "^5.0.46",
+    "framer-motion": "^12.23.1",
     "next": "latest",
     "next-auth": "5.0.0-beta.25",
     "postcss": "8.5.1",
@@ -18,6 +20,7 @@
     "react": "latest",
     "react-dom": "latest",
     "tailwindcss": "3.4.17",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.7.3",
     "use-debounce": "^10.0.4",
     "zod": "^3.25.17"
